--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
 <head>
   <meta charset='UTF-8'/>
   <title>Prose &middot; A Content Editor for GitHub</title>
-  <link rel='shortcut icon' href='/{{site.baseurl}}images/favicon.ico' type='image/x-icon' />
-  <link rel='stylesheet' href='/{{site.baseurl}}fonts/open-sans.css'>
-  <link rel='stylesheet' href='/{{site.baseurl}}app.css'>
+  <link rel='shortcut icon' href='/{{site.baseurl}}/images/favicon.ico' type='image/x-icon' />
+  <link rel='stylesheet' href='/{{site.baseurl}}/fonts/open-sans.css'>
+  <link rel='stylesheet' href='/{{site.baseurl}}/app.css'>
   {% include templates.html %}
   <script src='/{{site.baseurl}}boot.js'></script>
   <script>
