--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
 <head>
   <meta charset='UTF-8'/>
   <title>Prose &middot; A Content Editor for GitHub</title>
-  <link rel='shortcut icon' href='/{{site.baseurl}}images/favicon.ico' type='image/x-icon' />
-  <link rel='stylesheet' href='/{{site.baseurl}}fonts/open-sans.css'>
-  <link rel='stylesheet' href='/{{site.baseurl}}app.css'>
+  <link rel='shortcut icon' href='/{{site.baseurl}}/images/favicon.ico' type='image/x-icon' />
+  <link rel='stylesheet' href='/{{site.baseurl}}/fonts/open-sans.css'>
+  <link rel='stylesheet' href='/{{site.baseurl}}/app.css'>
   {% include templates.html %}
 </head>
 <body>
@@ -17,9 +17,9 @@
 
   <div id='footer'>
     <div class="footer-content">
-      <a class='help' href="/{{site.baseurl}}help.html">Help</a><a class='about' href="/{{site.baseurl}}about.html">About</a>
+      <a class='help' href="/{{site.baseurl}}/help.html">Help</a><a class='about' href="/{{site.baseurl}}/about.html">About</a>
       <div class="fr brand">
-        <a href="/{{site.baseurl}}#prose/prose/blob/gh-pages/README.md">Prose 0.4.0</a>
+        <a href="/{{site.baseurl}}/#prose/prose/blob/gh-pages/README.md">Prose 0.4.0</a>
       </div>
    </div>
   </div>
